crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__selector__tests__args_range.snap
---
source: crates/mcf/src/syntax/grammar/selector.rs
expression: "parse_selector(\"@r[distance=1..17.5]\")"
---
Root(File)
Group(Selector) at 0:0 - 0:20 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModR) `r` at 0:1 - 0:2
    Group(SelectorArgument) at 0:2 - 0:20 {
        Token(LBracket) `[` at 0:2 - 0:3
        Group(SelectorArgumentEntry) at 0:3 - 0:19 {
            Joined(UnquotedString) `distance` at 0:3 - 0:11
            Token(Eq) `=` at 0:11 - 0:12
            Group(Range) at 0:12 - 0:19 {
                Joined(Float) `1` at 0:12 - 0:13
                Token(DotDot) `..` at 0:13 - 0:15
                Joined(Float) `17.5` at 0:15 - 0:19
            }
        }
        Token(RBracket) `]` at 0:19 - 0:20
    }
}

