crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__selector__tests__no_args.snap
---
source: crates/mcf/src/syntax/grammar/selector.rs
expression: "parse_selector(\"@p\")"
---
Root(File)
Group(Selector) at 0:0 - 0:2 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModP) `p` at 0:1 - 0:2
}

